@@ -19,60 +19,90 @@
 package net.mcreator.blockly.data;
 
 import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
 import net.mcreator.blockly.IBlockGenerator;
 import org.apache.commons.lang3.StringUtils;
 
 import javax.annotation.Nullable;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @SuppressWarnings({ "unused", "MismatchedQueryAndUpdateOfCollection" }) public class ToolboxBlock {
+	String machine_name;
 	String toolbox_id;
-	public String machine_name;
-	public IBlockGenerator.BlockType type;
+	IBlockGenerator.BlockType type;
 
 	@Nullable private List<String> fields;
+	@Nullable private List<RepeatingField> repeating_fields;
 	@Nullable private List<IInput> inputs;
 	@Nullable private List<StatementInput> statements;
+	@Nullable private List<IInput> repeating_inputs;
+	@Nullable private List<StatementInput> repeating_statements;
+
 	@Nullable private List<Dependency> dependencies;
 	@Nullable private List<String> warnings;
 	@Nullable private List<String> required_apis;
 	@Nullable private String group;
-	@Nullable public List<String> toolbox_init;
+
+	@Nullable private List<String> toolbox_init;
 
 	public boolean error_in_statement_blocks = false;
 
 	/* Fields below are not included in block JSON but loaded dynamically */
-	public JsonElement blocklyJSON;
-	@Nullable public String toolboxXML;
-	@Nullable public ToolboxCategory toolboxCategory;
+	transient JsonElement blocklyJSON;
+	@Nullable private transient String toolboxXML;
+	@Nullable private transient String toolboxTestXML; // XML setup used in tests
+	@Nullable transient ToolboxCategory toolboxCategory;
 
 	@Nullable public List<String> getFields() {
 		return fields;
 	}
 
+	@Nullable public List<RepeatingField> getRepeatingFields() {
+		return repeating_fields;
+	}
+
 	public List<String> getInputs() {
 		return inputs != null ?
-				inputs.stream().filter(e -> e instanceof NamedInput).map(IInput::name).collect(Collectors.toList()) :
+				inputs.stream().filter(e -> e instanceof NamedInput).map(IInput::name).toList() :
 				Collections.emptyList();
 	}
 
 	public List<AdvancedInput> getAdvancedInputs() {
 		return inputs != null ?
-				inputs.stream().filter(e -> e instanceof AdvancedInput).map(e -> (AdvancedInput) e)
-						.collect(Collectors.toList()) :
+				inputs.stream().filter(e -> e instanceof AdvancedInput).map(e -> (AdvancedInput) e).toList() :
 				Collections.emptyList();
 	}
 
 	public List<String> getAllInputs() {
-		return inputs != null ?
-				inputs.stream().map(IInput::name).collect(Collectors.toList()) :
-				Collections.emptyList();
+		return inputs != null ? inputs.stream().map(IInput::name).toList() : Collections.emptyList();
 	}
 
 	@Nullable public List<StatementInput> getStatements() {
 		return statements;
+	}
+
+	public List<String> getRepeatingInputs() {
+		return repeating_inputs != null ?
+				repeating_inputs.stream().filter(e -> e instanceof NamedInput).map(IInput::name).toList() :
+				Collections.emptyList();
+	}
+
+	public List<AdvancedInput> getRepeatingAdvancedInputs() {
+		return repeating_inputs != null ?
+				repeating_inputs.stream().filter(e -> e instanceof AdvancedInput).map(e -> (AdvancedInput) e).toList() :
+				Collections.emptyList();
+	}
+
+	public List<String> getAllRepeatingInputs() {
+		return repeating_inputs != null ?
+				repeating_inputs.stream().map(IInput::name).toList() :
+				Collections.emptyList();
+	}
+
+	@Nullable public List<StatementInput> getRepeatingStatements() {
+		return repeating_statements;
 	}
 
 	@Nullable public List<Dependency> getDependencies() {
@@ -85,6 +115,54 @@ import java.util.stream.Collectors;
 
 	@Nullable public List<String> getRequiredAPIs() {
 		return required_apis;
+	}
+
+	@Nullable public ToolboxCategory getToolboxCategory() {
+		return toolboxCategory;
+	}
+
+	public IBlockGenerator.BlockType getType() {
+		return type;
+	}
+
+	public String getMachineName() {
+		return machine_name;
+	}
+
+	@Nullable public List<String> getToolboxInitStatements() {
+		return toolbox_init;
+	}
+
+	public String getToolboxXML() {
+		if (toolboxXML == null) {
+			StringBuilder toolboxXMLBuilder = new StringBuilder();
+			toolboxXMLBuilder.append("<block type=\"").append(machine_name).append("\">");
+			if (toolbox_init != null)
+				toolbox_init.stream().filter(Objects::nonNull).filter(e -> !e.startsWith("~"))
+						.forEach(toolboxXMLBuilder::append);
+			toolboxXMLBuilder.append("</block>");
+			toolboxXML = toolboxXMLBuilder.toString();
+		}
+
+		return toolboxXML;
+	}
+
+	public String getToolboxTestXML() {
+		if (toolboxTestXML == null) {
+			StringBuilder toolboxXMLBuilder = new StringBuilder();
+			toolboxXMLBuilder.append("<block type=\"").append(machine_name).append("\">");
+			if (toolbox_init != null)
+				toolbox_init.stream().filter(Objects::nonNull).map(e -> e.startsWith("~") ? e.substring(1) : e)
+						.forEach(toolboxXMLBuilder::append);
+			toolboxXMLBuilder.append("</block>");
+			toolboxTestXML = toolboxXMLBuilder.toString();
+		}
+
+		return toolboxTestXML;
+	}
+
+	public JsonObject getBlocklyJSON() {
+		return blocklyJSON.getAsJsonObject();
 	}
 
 	public String getName() {
